--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div id="status-container">
-		<div id="status">Récupération des informations du serveur [Nom de Votre Serveur]....</div>
+		<div id="status">Récupération des informations du serveur de Alty| La Domination Impériale  ....</div>
 		<div id="loading">
 			<div id="loading-progress"></div>
 		</div>
